--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="AIdvisor client application."
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        script-src 'self';
+        style-src 'self' 'unsafe-inline'
+      "
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
